--- a/configpanel/res/values/strings.xml
+++ b/configpanel/res/values/strings.xml
@@ -11,6 +11,8 @@
     <string name="touchpad_double_tap_title">Enable double tap to capture</string>
     <string name="touchpad_double_tap_summary">Double tapping on the touchpad will capture an image if the camera is open</string>
     <string name="touchscreen_gestures_title">Touchscreen gestures</string>
+    <string name="touchscreen_double_tap_gesture_title">Double tap gesture</string>
+    <string name="touchscreen_double_tap_gesture_summary">Double tap while the screen is off to wake the device</string>
     <string name="touchscreen_camera_gesture_title">Camera gesture</string>
     <string name="touchscreen_camera_gesture_summary">Draw a circle while the screen is off to activate camera</string>
     <string name="touchscreen_music_gesture_title">Music gesture</string>
