--- a/configpanel/res/values/strings.xml
+++ b/configpanel/res/values/strings.xml
@@ -1,31 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Config Panel</string>
+    <!-- O-Touch settings -->
+    <string name="backpad_panel_title">O-Touch settings</string>
+    <string name="backpad_panel_summary">Configure O-Touch</string>
 
-    <!-- Touchpad preference strings -->
-    <string name="touchpad_preference_title">Touchpad configurations</string>
-    <string name="touchpad_enable_title">Enable touchpad</string>
-    <string name="touchpad_enable_summary">Back touchpad can be used to navigate the phone</string>
-    <string name="touchpad_long_press_title">Enable long press to launch camera</string>
-    <string name="touchpad_long_press_summary">Long pressing on the touchpad will launch the camera application</string>
-    <string name="touchpad_double_tap_title">Enable double tap to capture</string>
-    <string name="touchpad_double_tap_summary">Double tapping on the touchpad will capture an image if the camera is open</string>
-    <string name="touchscreen_gestures_title">Touchscreen gestures</string>
-    <string name="touchscreen_double_tap_gesture_title">Double tap gesture</string>
-    <string name="touchscreen_double_tap_gesture_summary">Double tap while the screen is off to wake the device</string>
-    <string name="touchscreen_camera_gesture_title">Camera gesture</string>
-    <string name="touchscreen_camera_gesture_summary">Draw a circle while the screen is off to activate camera</string>
-    <string name="touchscreen_music_gesture_title">Music gesture</string>
-    <string name="touchscreen_music_gesture_summary">Swipe two fingers down to play/pause, right/left arrow to skip forward/backward in music app</string>
-    <string name="touchscreen_flashlight_gesture_title">Flashlight gesture</string>
-    <string name="touchscreen_flashlight_gesture_summary">Draw V to toggle flashlight</string>
+    <string name="touchpad_enable_title">Enable O-Touch</string>
+    <string name="touchpad_enable_summary">Rear touchpad to navigate the phone</string>
+    <string name="touchpad_long_press_title">Long press to launch camera</string>
+    <string name="touchpad_long_press_summary">Long press on the touchpad will launch the camera application</string>
+    <string name="touchpad_double_tap_title">Double tap to capture</string>
+    <string name="touchpad_double_tap_summary">While in camera, double tap to capture image</string>
 
-    <string name="oclick_panel_title">O-click settings</string>
-    <string name="oclick_panel_summary">Configure o-click device</string>
+    <!-- Gesture shortcuts -->
+    <string name="screen_gestures_panel_title">Gesture shortcuts</string>
+    <string name="screen_gestures_panel_summary">Use gestures while the screen is off</string>
 
-    <string name="screen_gestures_panel_title">Screen gestures</string>
-    <string name="screen_gestures_panel_summary">Configure touch panel gestures</string>
+    <string name="touchscreen_double_tap_gesture_title">Wake device</string>
+    <string name="touchscreen_double_tap_gesture_summary">Double tap to wake the device</string>
+    <string name="touchscreen_camera_gesture_title">Camera</string>
+    <string name="touchscreen_camera_gesture_summary">Draw a circle to activate camera</string>
+    <string name="touchscreen_music_gesture_title">Music</string>
+    <string name="touchscreen_flashlight_gesture_title">Flashlight</string>
+    <string name="touchscreen_flashlight_gesture_summary">Draw a \'V\' to toggle flashlight</string>
+    <string name="touchscreen_music_gesture_summary">Use gestures to control music playback \n
+    • Two fingers vertically to play/pause\n
+    • Draw left arrow for previous track\n
+    • Draw right arrow for next track</string>
 
-    <string name="backpad_panel_title">Backtouch settings</string>
-    <string name="backpad_panel_summary">Configure the back touchpad</string>
+    <!-- O-Click settings -->
+    <string name="oclick_panel_title">O-Click settings</string>
+    <string name="oclick_panel_summary">Configure O-Click device</string>
+
+    <string name="oclick_connect_string">Connect</string>
+    <string name="oclick_disconnect_string">Disconnect</string>
+    <string name="oclick_dialog_title">O-Click</string>
+    <string name="oclick_dialog_connecting_message">Attempting to pair</string>
 </resources>
